[gd_scene load_steps=11 format=3 uid="uid://pnm6jjnoqd3r"]

[ext_resource type="Texture2D" uid="uid://dcd8mbfb71tlp" path="res://assets/sprites/slime_green.png" id="1_kib5p"]
[ext_resource type="Script" uid="uid://cb7t7dldbp6mj" path="res://script/slime_2.gd" id="1_kpkrp"]
[ext_resource type="PackedScene" uid="uid://ck8t62a7s62b3" path="res://scenes/kzone.tscn" id="2_kpkrp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4jav0"]
atlas = ExtResource("1_kib5p")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnney"]
atlas = ExtResource("1_kib5p")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hunw"]
atlas = ExtResource("1_kib5p")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e4ud"]
atlas = ExtResource("1_kib5p")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ih3nm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jav0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnney")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hunw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e4ud")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_n6pvg"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pjw23"]
radius = 5.0

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_kpkrp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_ih3nm")
autoplay = "default"
frame_progress = 0.76175

[node name="Kzone" parent="." instance=ExtResource("2_kpkrp")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kzone"]
shape = SubResource("CircleShape2D_n6pvg")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 44)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pjw23")
